<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_vendor</name>
  <version>1.13.1</version>
  <description>vendor package for the PCL library</description>
  <maintainer email="f0reach@f0reach.me">f0reachARR</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>